--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,45 @@
+# 化工图风控系统依赖包清单
+# 核心数据处理
 pandas>=1.0.0
+numpy>=1.20.0
+python-dateutil>=2.8.0
+
+# 图分析和网络
 networkx>=2.5
 python-louvain>=0.15
-pyvis>=0.3.2
-flask>=2.0.0
 igraph>=0.9.0
-numpy>=1.20.0 
+
+# 机器学习和异常检测
+scikit-learn>=0.24.0
+pyod>=1.0.0  # 异常检测专用库
+tensorflow>=2.8.0  # 深度学习（可选）
+
+# 贝叶斯优化
+optuna>=3.0.0  # 贝叶斯超参数优化
+
+# 可视化
+matplotlib>=3.3.0
+seaborn>=0.11.0
+pyvis>=0.3.2
+
+# 统计分析
+scipy>=1.6.0
+
+# 并行处理和性能
+joblib>=1.0.0  # 模型持久化和并行处理
+psutil>=5.8.0  # 系统监控
+
+# 进度条和用户界面
+tqdm>=4.60.0
+
+# Web框架（如果需要）
+flask>=2.0.0
+
+# 解释性AI（可选）
+shap>=0.40.0  # SHAP值解释
+
+# 数据质量和验证
+combo>=0.1.0  # 集成学习库
+
+# 开发和调试工具
+jupyter>=1.0.0  # Jupyter notebook支持（可选） 
